# jddesk

./: Dockerfile  MANIFEST.in  README.md  pyproject.toml  test.py  tox.ini
.github/workflows/: docker-build.yml  run-tests.yml  windows-build.yml
jddesk/: __main__.py  common.py  config.py  desk.py  setup_config.py  twitch.py  web.py
jddesk/display/: __main__.py  web.py
jddesk/display/static/: socket.io.js
jddesk/display/templates/: index.html
jddesk/templates/: index.html
kustomize/: .jddesk.ini  kustomization.yml
kustomize/jddesk/: kustomization.yml
kustomize/jddesk/controller/: deployment.yml
kustomize/jddesk/display/: deployment.yml  ingress.yml  service.yml
windows/: README.txt  configure.bat  run.bat
