
[project]
name = "jddesk"
description = "Code powering Jaedolph's desk related channel points rewards"
version = "0.2.1"
authors = [
    { name = "Jaedolph - Lord of Games" }
]
dependencies = [
    "flask",
    "flask_socketio",
    "python-socketio[client]",
    "bleak",
    "twitchAPI",
    "pwinput",
]

[project.scripts]
jddesk = "jddesk.__main__:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["jddesk", "jddesk.display"]

[tool.black]
line-length = 100

[tool.docformatter]
wrap-summaries = 100
wrap-descriptions = 100

[tool.pylint]
load-plugins = ["pylint.extensions.docparams", "pylint.extensions.docstyle"]
max-args = 10
max-attributes = 10

[[tool.mypy.overrides]]
module = "socketio"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pwinput"
ignore_missing_imports = true
